# ig-downloader-skill

./: .gitignore  .instagram_downloader_v1.1.0.py  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  instagram_downloader.py  instagram_downloader.py.v2  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: auto_release.py
tests/: test_downloader.py
