[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ig-downloader-skill"
version = "1.1.0"
description = "Download Instagram media (reels, carousels, photos) using Apify Actor data with optional instagrapi carousel enhancement"
readme = "README.md"
license = {text = "GPL-2.0-only"}
authors = [
    {name = "Edgar Zorrilla"}
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "instagrapi>=2.0.0",
]

[project.urls]
Repository = "https://github.com/USERNAME/ig-downloader-skill"
Issues = "https://github.com/USERNAME/ig-downloader-skill/issues"

[project.scripts]
ig-downloader = "instagram_downloader:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["instagram_downloader*"]
